--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "antd": "^4.21.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "npx tailwindcss -i ./src/index.css -o ./dist/output.css && vite build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +39,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "sass": "^1.53.0",
+    "tailwindcss": "^3.1.4",
+    "vite": "^2.9.13"
   }
 }
