--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
     "sass": "^1.53.0",
     "tailwindcss": "^3.1.4",
     "vite": "^2.9.13"
